// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceDetails With languages Snapshot 1`] = `
<div>
  <Header
    handlerOnChangeLanguage={[Function]}
    isMobile={false}
    languages={
      Array [
        Object {
          "code": "es",
          "name": "Spanish",
        },
        Object {
          "code": "en",
          "name": "English",
        },
      ]
    }
    logoHeader="logoHeader"
    user={
      Object {
        "first_name": "first_name",
        "last_name": "last_name",
      }
    }
  />
  <Hero
    background="background"
    isLogged={false}
    logoLanding="logoLanding"
    message="EventoL v2.3.0"
  >
    <h6>
      Users: 4000
      <br />
      Events: 500
      <br />
      Django: 1.11.29
      <br />
      Python: 3.9.6 (default, Jun 29 2021, 19:45:46) [GCC 10.2.1 20201203]
      <br />
      Commit: 3af85e99036166d1267c3794e333a5b12c729561 Fix react lints
    </h6>
  </Hero>
</div>
`;

exports[`InstanceDetails With user Desktop Snapshot 1`] = `
<div>
  <Header
    handlerOnChangeLanguage={[Function]}
    isMobile={false}
    languages={Array []}
    logoHeader="logoHeader"
    user={
      Object {
        "first_name": "first_name",
        "last_name": "last_name",
      }
    }
  />
  <Hero
    background="background"
    isLogged={false}
    logoLanding="logoLanding"
    message="EventoL v2.3.0"
  >
    <h6>
      Users: 4000
      <br />
      Events: 500
      <br />
      Django: 1.11.29
      <br />
      Python: 3.9.6 (default, Jun 29 2021, 19:45:46) [GCC 10.2.1 20201203]
      <br />
      Commit: 3af85e99036166d1267c3794e333a5b12c729561 Fix react lints
    </h6>
  </Hero>
</div>
`;

exports[`InstanceDetails With user Mobile Snapshot 1`] = `
<div>
  <Header
    handlerOnChangeLanguage={[Function]}
    isMobile={true}
    languages={Array []}
    logoHeader="logoHeader"
    user={
      Object {
        "first_name": "first_name",
        "last_name": "last_name",
      }
    }
  />
  <Hero
    background="background"
    isLogged={false}
    logoLanding="logoLanding"
    message="EventoL v2.3.0"
  >
    <h6>
      Users: 4000
      <br />
      Events: 500
      <br />
      Django: 1.11.29
      <br />
      Python: 3.9.6 (default, Jun 29 2021, 19:45:46) [GCC 10.2.1 20201203]
      <br />
      Commit: 3af85e99036166d1267c3794e333a5b12c729561 Fix react lints
    </h6>
  </Hero>
</div>
`;

exports[`InstanceDetails Without user Desktop Snapshot 1`] = `
<div>
  <Header
    handlerOnChangeLanguage={[Function]}
    isMobile={false}
    languages={Array []}
    logoHeader="logoHeader"
    user={
      Object {
        "first_name": "first_name",
        "last_name": "last_name",
      }
    }
  />
  <Hero
    background="background"
    isLogged={false}
    logoLanding="logoLanding"
    message="EventoL v2.3.0"
  >
    <h6>
      Users: 4000
      <br />
      Events: 500
      <br />
      Django: 1.11.29
      <br />
      Python: 3.9.6 (default, Jun 29 2021, 19:45:46) [GCC 10.2.1 20201203]
      <br />
      Commit: 3af85e99036166d1267c3794e333a5b12c729561 Fix react lints
    </h6>
  </Hero>
</div>
`;

exports[`InstanceDetails Without user Mobile Snapshot 1`] = `
<div>
  <Header
    handlerOnChangeLanguage={[Function]}
    isMobile={true}
    languages={Array []}
    logoHeader="logoHeader"
    user={
      Object {
        "first_name": "first_name",
        "last_name": "last_name",
      }
    }
  />
  <Hero
    background="background"
    isLogged={false}
    logoLanding="logoLanding"
    message="EventoL v2.3.0"
  >
    <h6>
      Users: 4000
      <br />
      Events: 500
      <br />
      Django: 1.11.29
      <br />
      Python: 3.9.6 (default, Jun 29 2021, 19:45:46) [GCC 10.2.1 20201203]
      <br />
      Commit: 3af85e99036166d1267c3794e333a5b12c729561 Fix react lints
    </h6>
  </Hero>
</div>
`;
